--- a/AplikasiPergudangan/src/com/main/frMain.form
+++ b/AplikasiPergudangan/src/com/main/frMain.form
@@ -47,11 +47,11 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="menu" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="frame_Welcome1" max="32767" attributes="0"/>
+                      <Component id="frame_Welcome1" pref="828" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="mainPanel" min="-2" pref="814" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
+                          <Component id="mainPanel" max="32767" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -59,19 +59,17 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="menu" pref="557" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
                   <Component id="frame_Welcome1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="mainPanel" max="32767" attributes="0"/>
+                  <Component id="mainPanel" pref="503" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
+              <Component id="menu" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="com.component.Menu" name="menu">
-        </Component>
         <Container class="javax.swing.JPanel" name="mainPanel">
           <Properties>
             <Property name="opaque" type="boolean" value="false"/>
@@ -83,6 +81,8 @@
           </Layout>
         </Container>
         <Component class="com.frame.Frame_Welcome" name="frame_Welcome1">
+        </Component>
+        <Component class="com.component.Menu" name="menu">
         </Component>
       </SubComponents>
     </Container>
