--- a/AplikasiPergudangan/src/com/main/frLogin.form
+++ b/AplikasiPergudangan/src/com/main/frLogin.form
@@ -62,10 +62,6 @@
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="264" max="-2" attributes="0"/>
-                          <Component id="btnLogin" min="-2" pref="116" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="200" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="txtUsername" max="32767" attributes="0"/>
@@ -76,6 +72,10 @@
                               <Component id="LPass" min="-2" max="-2" attributes="0"/>
                               <Component id="LUser" min="-2" max="-2" attributes="0"/>
                           </Group>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="268" max="-2" attributes="0"/>
+                          <Component id="btnLogin" min="-2" pref="116" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="214" max="32767" attributes="0"/>
@@ -98,13 +98,13 @@
                       <Component id="txtPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="LPass" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnLogin" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="97" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
                   <Component id="regist1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -146,8 +146,6 @@
             <Property name="text" type="java.lang.String" value="Login"/>
           </Properties>
         </Component>
-        <Component class="com.component.Regist" name="regist1">
-        </Component>
         <Component class="com.swing.MyButton" name="btnLogin">
           <Properties>
             <Property name="text" type="java.lang.String" value="Login"/>
@@ -156,7 +154,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLoginActionPerformed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="btnLogin.setBackground(new Color(255,153,102));&#xa;btnLogin.setForeground(new Color(250, 250, 250));&#xa;btnLogin.setText(&quot;SIGN IN&quot;);&#xa;btnLogin.setFont(new java.awt.Font(&quot;Poppins&quot;, 0, 13));"/>
+            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="btnLogin.setBackground(new Color(255,153,102));&#xa;btnLogin.setForeground(new Color(250, 250, 250));&#xa;btnLogin.setText(&quot;Masuk&quot;);&#xa;btnLogin.setFont(new java.awt.Font(&quot;Poppins&quot;, 0, 13));"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="LPass">
@@ -178,6 +176,8 @@
               <Color blue="66" green="99" red="ff" type="rgb"/>
             </Property>
           </Properties>
+        </Component>
+        <Component class="com.component.Regist" name="regist1">
         </Component>
       </SubComponents>
     </Container>
