--- a/AplikasiPergudangan/src/com/main/frMain.form
+++ b/AplikasiPergudangan/src/com/main/frMain.form
@@ -45,9 +45,10 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="menu" min="-2" max="-2" attributes="0"/>
+                  <Component id="menu1" min="-2" pref="253" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="frame_Welcome1" pref="828" max="32767" attributes="0"/>
+                      <Component id="frame_Welcome1" pref="804" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" max="-2" attributes="0"/>
                           <Component id="mainPanel" max="32767" attributes="0"/>
@@ -65,7 +66,7 @@
                   <Component id="mainPanel" pref="503" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
-              <Component id="menu" alignment="0" max="32767" attributes="0"/>
+              <Component id="menu1" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -82,7 +83,7 @@
         </Container>
         <Component class="com.frame.Frame_Welcome" name="frame_Welcome1">
         </Component>
-        <Component class="com.component.Menu" name="menu">
+        <Component class="com.component.Menu" name="menu1">
         </Component>
       </SubComponents>
     </Container>
