--- a/AplikasiPergudangan/src/com/component/Searching.form
+++ b/AplikasiPergudangan/src/com/component/Searching.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="e3" green="e3" red="e3" type="rgb"/>
@@ -22,9 +22,9 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Component id="search1" min="-2" pref="357" max="-2" attributes="0"/>
-              <EmptySpace pref="51" max="32767" attributes="0"/>
+              <EmptySpace pref="142" max="32767" attributes="0"/>
               <Component id="btnInsert" min="-2" pref="90" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
           </Group>
@@ -45,11 +45,20 @@
   </Layout>
   <SubComponents>
     <Component class="com.swing.Search" name="search1">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="search1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="com.swing.MyButton" name="btnInsert">
       <Properties>
         <Property name="text" type="java.lang.String" value="Insert Product"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInsertActionPerformed"/>
+      </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="btnInsert.setBackground(new Color(255,153,102));&#xa;btnInsert.setForeground(new Color(250, 250, 250));&#xa;btnInsert.setText(&quot;Insert&quot;);&#xa;btnInsert.setFont(new java.awt.Font(&quot;Poppins&quot;, 0, 13));"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
